..F....... [ZBX-22418] fixed popup form fields overlapping labels when textarea width is resized

--- a/sass/stylesheets/sass/screen.scss
+++ b/sass/stylesheets/sass/screen.scss
@@ -1620,6 +1620,7 @@ textarea {
 	padding: 4px 5px;
 	margin: 0;
 	overflow: auto;
+	resize: vertical;
 	@extend %form-input-style;
 	@extend %webkit-scrollbar;
 
