--- a/ui/assets/styles/blue-theme.css
+++ b/ui/assets/styles/blue-theme.css
@@ -3625,7 +3625,8 @@ textarea {
   font-size: 1em;
   padding: 4px 5px;
   margin: 0;
-  overflow: auto; }
+  overflow: auto;
+  resize: vertical; }
   textarea[readonly] {
     color: #1f2c33 !important; }
     textarea[readonly]:focus {
